css/main.css
* {
    box-sizing: border-box;
}

body {
    font-family: Helvetica, sans-serif;
    background: #311d6a;
    background: -moz-linear-gradient(left, #311d6a 0%, #1a1335 100%);
    background: -webkit-linear-gradient(left, #311d6a 0%, #1a1335 100%);
    background: linear-gradient(to right, #311d6a 0%, #1a1335 100%);
}

header {
    text-align: center;
    padding: 20px;
    margin-bottom: 10px;
    width: 100%;
    color: #f2f2f2;
}

h1 {
    font-size: 42px;
    color: #f2f2f2;
}

h2 {
    font-weight: 300;
    color: #f2f2f2;
}

p {
    margin: 0 auto;
    color: #0b0a0c;
}

a {
    text-decoration: none;
}

.search-area {
    text-align: center;
    margin: 0 auto;
    padding-bottom: 40px;
    position: relative;
}

.search-form {
    position: absolute;
    float: left;
    margin: 10px;
    text-align: center;
}

input[type="text"] {
    text-align: center;
    height: 40px;
    width: 240px;
    border: 1px solid gray;
    border-radius: 5px;
    background-color: #f2f2f2;
}

.search-button {
    border: none;
    border-radius: 5px;
    height: 40px;
    width: 140px;
    font-size: 14px;
    background: #2f51ae;
    background: -moz-linear-gradient(left, #2f51ae 0%, #4ec8d3 100%);
    background: -webkit-linear-gradient(left, #2f51ae 0%,#4ec8d3 100%);
    background: linear-gradient(to right, #2f51ae 0%,#4ec8d3 100%);
    color: #f2f2f2;
    text-transform: uppercase;
    cursor: pointer;
}

.search-button:hover {
    background: #2f51ae;
    background: -moz-linear-gradient(left, #4ec8d3 0%, #2f51ae 100%);
    background: -webkit-linear-gradient(left, #4ec8d3 0%, #2f51ae 100%);
    background: linear-gradient(to right, #4ec8d3 0%, #2f51ae 100%);
    color: #f2f2f2;
}

.suggested-search {
    padding: 30px;
    position: absolute;
    display: inline-block;
    color: #f2f2f2;

}

.suggested-topic {
    display: inline-block;
    text-align: center;
    font-size: 14px;
    padding: 5px;
    border-radius: 5px;
    color: #f2f2f2;
    background: transparent;
    border: 1px solid #f2f2f2;
    cursor: pointer;
}

.suggested-topic:hover {
    background: #f2f2f2;
    color: #2f51ae;
}

.search-results {
    padding-top: 40px;
}

.source-container {
    border-radius: 5px;
    margin: 20px;
}

.source-header {
    position: relative;
    height: 80px;
    text-align: center;
    border-bottom: 1px solid #f2f2f2;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    padding: 20px;
    background-color: #f2f2f2;
}

.source-title {
    text-decoration: none;
}

.twitter-title {
    font-family: Helvetica Neue, Helvetica, sans-serif;
    color: #151013;
    font-size: 44px;
    font-weight: 700;
    display: inline;
    margin-bottom: 20px;
}

.source-content {
    background-color: #f2f2f2;
    padding: 10px;
}

.source-content-piece {
    padding-bottom: 10px;
    border-top: 1px solid gray;
}

.source-content h4 {
    font-size: 20px;
    font-weight: 600;
    color: #4078c0;
    line-height: 30px;
}

.repo-description {
    color: #767676;
    font-size: 14px;
    line-height: 21px;
}

.repo-language, .repo-stars, .repo-forks, .repo-updated {
    font-size: 12px;
    color: #767676;
    line-height: 18px;
    display: inline;
}

.repo-language-circle {
    width: 12px;
    height: 12px;
    background-color: red;
    border-radius: 50%;
    display: inline-block;
}

.git-star {
    background-image: url(../images/GitHub-Logos/git-star.svg);
    background-repeat: no-repeat;
    background-position: center;
    display: inline-block;
    height: 15px;
    width: 15px;
    max-width: 100%;
}

.git-fork {
    background-image: url(../images/GitHub-Logos/small-git-fork.svg);
    background-repeat: no-repeat;
    background-position: center;
    display: inline-block;
    height: 15px;
    width: 15px;
    max-width: 100%;
}

.vote-box,
.answer-box {
    width: 58px;
    height: 35px;
    padding: 7px 0px 5px;
    color: #6a737c;
    display: block;
    float: left;
}

